$Id$

2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b31

	* added CVS variable <dollary>Id$ to every file except: 
		./configure.bat   ./secure.bat ./setup/.htaccess 
		./setup/mod_rewrite.template ./setup/php_value.template
	 
2003-06-26  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b30

	* Fix small html errors in view_photo.php.  Bug #760481.

2003-06-26  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b29

	* Gallery Remote protocol version 2.3: fetch-albums returns the list
	  of available extrafields for the album; add-item looks to HTTP vars
	  extrafield_<fieldname> for extra fields and sets them on picture.

2003-06-25  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b28

	* change reload() to just call the javascript directly, rather
	  adding a redundant <body> tag.

	* Jens' suggestion to keep the rotate window open, so you
	  can see the result of your handiwork.  I think it's pretty
	  cool, actually, but we can always roll it back if people
	  don't like it.

2003-06-25  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b27

	* Improved fetching list of albums from server anywhere from 50% to 95%.

2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b26

	* Jens' fix to rotate photo, which didn't do 180 rotation if ImageMagick
	  is used.

2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b25

	* More changes to ease ML version (explicit strings for dates)

2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b24

	* Make "Title" explicit to simplify ML version.

2003-06-23  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b23

	* bug in the delete/id2 code.  When delete is called from the pulldown
	  menu in view_album.php, id2 is defaulting to an empty string, so test
	  for that explicitly.

2003-06-19  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.5-cvs-b22

	* Fixed error in Config. Wizard where Step 1 would incorrectly