@@ -1,3 +1,4 @@
+$Id$
 
 Many people have dedicated their time to making Gallery what it is
 today.  Here is a list of folks in alphabetical order who have
@@ -30,5 +31,3 @@ Sammy Spets		<sammys@cse.unsw.edu.au>
 Steve Lacy		<gallery@slacy.com>
 Dr. Tilman Bubeck	<t.bubeck@reinform.de>
 Troy Edwards		<vallimar@sexorcisto.net>
-
-$Id$
