@@ -1,3 +1,5 @@
+$Id$
+
 CONTENTS
   1. What is Gallery?
   2. How do I install Gallery on Unix if I have shell access?
@@ -241,5 +243,3 @@ a feature, you can do that here:
 
 It's a good idea to check through these databases to see if the
 bug/feature that you're referring to is already in there.
-
-$Id$
