@@ -1,3 +1,5 @@
+$Id$
+
 CONTENTS
  1. How to upgrade Gallery
  2. How to upgrade a modified Gallery
@@ -164,5 +166,3 @@ you will almost certainly need to re-run the Gallery configuration
 wizard after doing this, since the automatically generated config.php
 file will still have short tags.  Also note that this may break other
 applications you have on your site that use short tags.
-
-$Id$
