@@ -495,7 +495,7 @@ function processFile($file, $tag, $name, $setCaption="") {
 			}
 			//echo "Extra fields ". implode("/", array_keys($myExtraFields)) ." -- ". implode("/", array_values($myExtraFields)) ."\n";
 
-	        $err = $gallery->album->addPhoto($file, $tag, $mangledFilename, $caption, "", $myExtraFields);
+	        $err = $gallery->album->addPhoto($file, $tag, $mangledFilename, $caption, "", $myExtraFields, $gallery->user->getUid());
 	        if (!$err) {
 	            /* resize the photo if needed */
 	            if ($gallery->album->fields["resize_size"] > 0 && isImage($tag)) {
