@@ -1,5 +1,12 @@
 $Id$
 
+2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b32
+
+	* Added item owner.  Now each individual album item has an owner.  
+	  Whether or not the owner can modify or delete her own images and
+	  whether the name of the owner is displayed is configurable at album 
+	  level.
+
 2003-06-26  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b31
 
 	* added CVS variable <dollary>Id$ to every file except: 
